--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -26,7 +26,7 @@ body{
     padding-right: 25px;
     position: relative;
     top: -10px;
-    left: 30px;
+    left: 45px;
     font-size: 20px;
 }
 
@@ -51,11 +51,13 @@ body{
             flex-direction: row;
         }
         .drinks__list__drink{
-            padding: 15px;
+            padding-right: 30px;
+            padding-left: 0px;
             color: #abc4df;
         }
         .drinks__list__drink--active{
-            padding: 15px;
+            padding-right: 30px;
+            padding-left: 0px;
             color: #36455d;
             text-decoration: underline solid black;
         }
@@ -65,19 +67,27 @@ body{
 .thumbnails{
     display: flex;
     flex-wrap: wrap;
+//  overflow: scroll;
     .thumbnails__thumbnail{
-        padding: 30px;
+        padding-bottom: 30px;
+        padding-right: 30px;
         width: 100%;
         height: 100%;
         @media screen and (min-width: $break-small) {
             width: 300px;
             height: 300px;
         }
-        img{
+        .thumbnails__thumbnail__image{
             width: 100%;
             box-shadow: 0px 0px 100px lightgrey,
         }
-        .thumbnails__title{
+        .thumbnails__thumbnail__image--selected{
+            width: 100%;
+            box-shadow: 0px 0px 100px lightgrey;
+            border: 5px solid #ffddbb;
+        }
+
+        .thumbnails__thumbnail__title{
             color: white;
             font-family: "Arial";
             font-size: 40px;
